--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="checkbox" id="display-line" name="display-line" checked/>
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">display line</label>
+                            <label for="display-line">display line</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
@@ -79,10 +79,18 @@
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="range" id="line-width" name="line-width" minvalue="0" maxvalue="100" value="50" />
+                            <input type="range" id="line-width" name="line-width" minvalue="0" maxvalue="10" value="5" />
                         </td>
                         <td  class="options-table">
                             <label for="line-width">line width</label>
+                        </td>
+                    </tr>
+                    <tr class="options-table-row">
+                        <td  class="options-table">
+                            <input type="range" id="line-opacity" name="line-opacity" minvalue="0" maxvalue="100" value="90" />
+                        </td>
+                        <td  class="options-table">
+                            <label for="line-opacity">line opacity</label>
                         </td>
                     </tr>
 
@@ -93,26 +101,34 @@
                     
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="checkbox" id="display-glow" name="display-glow" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">display glow</label>
+                            <label for="display-glow">display glow</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td class="options-table">
-                            <input type="color" id="line-color" name="line-color" value="#f6b73c" />
+                            <input type="color" id="glow-color" name="glow-color" value="#f6b73c" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-color">glow color</label>
+                            <label for="glow-color">glow color</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="range" id="line-width" name="line-width" minvalue="0" maxvalue="100" value="50" />
+                            <input type="range" id="glow-width" name="glow-width" minvalue="0" maxvalue="100" value="50" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">glow width</label>
+                            <label for="glow-width">glow width</label>
+                        </td>
+                    </tr>
+                    <tr class="options-table-row">
+                        <td  class="options-table">
+                            <input type="range" id="glow-opacity" name="glow-opacity" minvalue="0" maxvalue="100" value="90" />
+                        </td>
+                        <td  class="options-table">
+                            <label for="glow-opacity">glow opacity</label>
                         </td>
                     </tr>
 
@@ -121,137 +137,160 @@
 
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="checkbox" id="display-marker" name="display-marker" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">display marker</label>
+                            <label for="display-marker">display marker</label>
+                        </td>
+                    </tr>
+
+                    <tr class="options-table-row">
+                        <td class="options-table">
+                            <input type="color" id="marker-color" name="marker-color" value="#f6b73c" />
+                        </td>
+                        <td  class="options-table">
+                            <label for="marker-color">marker color</label>
+                        </td>
+                    </tr>
+
+                    <tr class="options-table-row">
+                        <td  class="options-table">
+                            <input type="range" id="marker-size" name="marker-size" minvalue="0" maxvalue="100" value="90" />
+                        </td>
+                        <td  class="options-table">
+                            <label for="marker-size">marker size</label>
                         </td>
                     </tr>
 
                     <tr class="options-table-row">
                         <td class="options-table" id="icon-select-placeholder">
                             <select id="icon-select">
-                                <option data-name="x mark" data-src="static/images/icons/0.png"></option>
-                                <option data-name="dot" data-src="static/images/icons/1.png"></option>
-                                <option data-name="point" data-src="static/images/icons/2.png"></option>
-                                <option data-name="plane" data-src="static/images/icons/3.png"></option>
-                                <option data-name="boots" data-src="static/images/icons/4.png"></option>
-                                <option data-name="hiker" data-src="static/images/icons/5.png"></option>
-                                <option data-name="mark" data-src="static/images/icons/6.png"></option>
-                                <option data-name="boat" data-src="static/images/icons/7.png"></option>
-                                <option data-name="pawn" data-src="static/images/icons/8.png"></option>
-                                <option data-name="dog" data-src="static/images/icons/9.png"></option>
+                                <option data-name="x mark" data-src="static/images/icons/0.svg">static/images/icons/0.svg</option>
+                                <option data-name="dot" data-src="static/images/icons/1.svg">static/images/icons/1.svg</option>
+                                <option data-name="point" data-src="static/images/icons/2.svg">static/images/icons/2.svg</option>
+                                <option data-name="plane" data-src="static/images/icons/3.svg">static/images/icons/3.svg</option>
+                                <option data-name="boots" data-src="static/images/icons/4.svg">static/images/icons/4.svg</option>
+                                <option data-name="hiker" data-src="static/images/icons/5.svg">static/images/icons/5.svg</option>
+                                <option data-name="mark" data-src="static/images/icons/6.svg">static/images/icons/6.svg</option>
+                                <option data-name="boat" data-src="static/images/icons/7.svg">static/images/icons/7.svg</option>
+                                <option data-name="pawn" data-src="static/images/icons/8.svg">static/images/icons/8.svg</option>
+                                <option data-name="dog" data-src="static/images/icons/9.svg">static/images/icons/9.svg</option>
                               </select>
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">marker shape</label>
+                            <label for="marker-shape">marker shape</label>
+                        </td>
+                    </tr>
+
+                    <tr class="options-table-row-hr"><td  class="options-table-hr">Other Options</td><td  class="options-table"></td></tr>
+
+                    <tr class="options-table-row-hr"><td  class="options-table-hr">Map Options</td><td  class="options-table"></td></tr>
+
+                    <tr class="options-table-row">
+                        <td  class="options-table">
+                            <input type="range" id="nimation-speed" name="nimation-speed" minvalue="0" maxvalue="100" value="50" />
+                        </td>
+                        <td  class="options-table">
+                            <label for="animation-speed">animation speed</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="range" id="line-width" name="line-width" minvalue="0" maxvalue="100" value="50" />
+                            <input type="range" id="zoom-level" name="zoom-level" minvalue="0" maxvalue="100" value="50" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">animation speed</label>
+                            <label for="zoom-level">zoom level</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="range" id="line-width" name="line-width" minvalue="0" maxvalue="100" value="50" />
+                            <input type="checkbox" id="show-title" name="show-title" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">zoom level</label>
+                            <label for="show-title">show gpx title</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="checkbox" id="show-distance" name="show-distance" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">show gpx title</label>
+                            <label for="show-distance">show distance</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="checkbox" id="show-elevation" name="show-elevation" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">show distance</label>
+                            <label for="show-elevation">show elevation</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="checkbox" id="enable-elevation" name="enable-elevation" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">show elevation</label>
+                            <label for="enable-elevation">enable elevation</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="checkbox" id="rotate-camera" name="rotate-camera" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">enable elevation</label>
+                            <label for="rotate-camera">rotate camera</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="checkbox" id="display-photos" name="display-photos" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">rotate camera</label>
+                            <label for="display-photos">display photos</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="checkbox" id="photo-pause" name="photo-pause" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">display photos</label>
+                            <label for="photo-pause">pause on photo</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
                         <td  class="options-table">
-                            <input type="checkbox" id="line-width" name="line-width" />
+                            <input type="number" id="pause-duration" name="pause-duration" value="3" />
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">pause on photo</label>
+                            <label for="pause-duration">pause duration</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
-                        <td  class="options-table">
-                            <input type="number" id="line-width" name="line-width" value="3" />
-                        </td>
-                        <td  class="options-table">
-                            <label for="line-width">pause duration</label>
-                        </td>
-                    </tr>
-                    <tr class="options-table-row">
-                        <td class="options-table" id="mode-select-placeholder">
-                            <select id="mode-select">
-                                <option data-name="marker" data-src="static/images/icons/0.png"></option>
-                                <option data-name="animation" data-src="static/images/icons/1.png"></option>
+                        <td class="options-table" id="display-select-placeholder">
+                            <select id="display-select">
+                                <option data-name="marker" data-src="static/images/icons/0.svg"></option>
+                                <option data-name="animation" data-src="static/images/icons/1.svg"></option>
                               </select>
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">display type</label>
+                            <label for="display-select">display type</label>
                         </td>
                     </tr>
                     <tr class="options-table-row">
-                        <td class="options-table" id="mode-select-placeholder">
-                            <select id="mode-select">
-                                <option data-name="hybrid" data-src="static/images/icons/1.png"></option>
-                                <option data-name="satellite" data-src="static/images/icons/0.png"></option>
-                                <option data-name="outdoors" data-src="static/images/icons/1.png"></option>
-                                <option data-name="pastel" data-src="static/images/icons/1.png"></option>
-                                <option data-name="winter" data-src="static/images/icons/1.png"></option>
-                                <option data-name="dark" data-src="static/images/icons/1.png"></option>
-                                <option data-name="light" data-src="static/images/icons/1.png"></option>
+                        <td class="options-table" id="map-select-placeholder">
+                            <select id="map-select">
+                                <option data-name="hybrid" data-src="static/images/icons/1.svg"></option>
+                                <option data-name="satellite" data-src="static/images/icons/0.svg"></option>
+                                <option data-name="outdoors" data-src="static/images/icons/1.svg"></option>
+                                <option data-name="pastel" data-src="static/images/icons/1.svg"></option>
+                                <option data-name="winter" data-src="static/images/icons/1.svg"></option>
+                                <option data-name="dark" data-src="static/images/icons/1.svg"></option>
+                                <option data-name="light" data-src="static/images/icons/1.svg"></option>
                               </select>
                         </td>
                         <td  class="options-table">
-                            <label for="line-width">map style</label>
+                            <label for="map-select">map style</label>
                         </td>
                     </tr>
                   </table>
@@ -274,6 +313,7 @@
             <div id="map"></div>
         </div>
 
+        <script src="static/js/options.js"></script>
         <script src="static/js/select.js"></script>
         <script src="static/js/animations.js"></script>
         <script src="static/js/paralax.js"></script>
