working elevation widget

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
             <div id="buttons-panel">
                 <button onclick="trackAnimation.play();" id="play-button">Play</button>
-                <button onclick="trackAnimation.play();" id="pause-button">Pause</button>
+                <button onclick="trackAnimation.pause();" id="pause-button">Pause</button>
             </div>
 
         </div>
