--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <button onclick="toggleImagesTab();" id="image-tab-toggle">-<br>-<br>-<br>-<br>-<br>-<br>-<br>-<br>-<br></button>
             </div>
             <h1>Images</h1>
-            <h2>(drag and drop them to the map)</h2>
+            <h2>(click on image and then drag marker to place)</h2>
             <div id="image-tab-content"></div>
         </div>
 
@@ -358,6 +358,7 @@
             <div id="map"></div>
         </div>
 
+        <script src="static/js/dragAndDrop.js"></script>
         <script src="static/js/elevation.js"></script>
         <script src="static/js/track.js"></script>
         <script src="static/js/options.js"></script>
