implemented marker merge

--- a/index.html
+++ b/index.html
@@ -357,7 +357,8 @@
         <div id="map-container">
             <div id="map"></div>
         </div>
-
+        
+        <script src="static/js/sceneManager.js"></script>
         <script src="static/js/dragAndDrop.js"></script>
         <script src="static/js/elevation.js"></script>
         <script src="static/js/track.js"></script>
