--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <td class="options-table" id="display-select-placeholder">
                             <select id="display-select">
                                 <option data-name="marker" data-src="static/images/icons/0.svg"></option>
-                                <option data-name="animation" data-src="static/images/icons/1.svg"></option>
+                                <option data-name="canvas" data-src="static/images/icons/1.svg"></option>
                               </select>
                         </td>
                         <td  class="options-table">
@@ -361,6 +361,7 @@
             <div id="map"></div>
         </div>
         
+        <script src="static/js/slideshow.js"></script>
         <script src="static/js/sceneManager.js"></script>
         <script src="static/js/dragAndDrop.js"></script>
         <script src="static/js/elevation.js"></script>
