--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
             <div id="help-panel">
                 <ul>
                     <li>Press P to play</li>
+                    <li>Press R to restart</li>
                     <li>Press S to stop</li>
                     <li>Press H to toogle UI</li>
                 </ul>
