--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <body>
 
         <div id="background">
-            <img id="background-level-1" src='static/images/level-1.png' />
-            <img id="background-level-2" src='static/images/level-2.png' />
-            <img id="background-level-3" src='static/images/level-3.png' />
-            <img id="background-level-4" src='static/images/level-4.png' />
-            <img id="background-level-5" src='static/images/level-5.png' />
-            <img id="background-level-6" src='static/images/level-6.png' />
-            <img id="background-level-7" src='static/images/level-7.png' />
-            <img id="background-level-8" src='static/images/level-8.png' />
-            <img id="background-level-9" src='static/images/level-9.png' />
-            <img id="background-level-10" src='static/images/level-10.png' />
+            <img id="background-level-1" src='static/images/paralax/level-1.svg' />
+            <img id="background-level-2" src='static/images/paralax/level-2.svg' />
+            <img id="background-level-3" src='static/images/paralax/level-3.svg' />
+            <img id="background-level-4" src='static/images/paralax/level-4.svg' />
+            <img id="background-level-5" src='static/images/paralax/level-5.svg' />
+            <img id="background-level-6" src='static/images/paralax/level-6.svg' />
+            <img id="background-level-7" src='static/images/paralax/level-7.svg' />
+            <img id="background-level-8" src='static/images/paralax/level-8.svg' />
+            <img id="background-level-9" src='static/images/paralax/level-9.svg' />
+            <img id="background-level-10" src='static/images/paralax/level-10.svg' />
+            <div id="background-background"></div>
         </div>
 
         <div id="content">
