--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
                     <tr class="options-table-row">
                         <td class="options-table" id="display-select-placeholder">
                             <select id="display-select">
-                                <option data-name="marker" data-src="static/images/icons/0.svg"></option>
-                                <option data-name="canvas" data-src="static/images/icons/1.svg"></option>
+                                <option data-name="marker" data-src="static/images/icons/0.svg">marker</option>
+                                <option data-name="canvas" data-src="static/images/icons/1.svg">canvas</option>
                               </select>
                         </td>
                         <td  class="options-table">
@@ -336,6 +336,15 @@
                         </td>
                         <td  class="options-table">
                             <label for="enable-recording">enable recording</label>
+                        </td>
+                    </tr>
+
+                    <tr class="options-table-row">
+                        <td  class="options-table">
+                            <input type="checkbox" id="use-fullscreen" name="use-fullscreen" checked="false"/>
+                        </td>
+                        <td  class="options-table">
+                            <label for="use-fullscreen">use fullscreen</label>
                         </td>
                     </tr>
                     
