implemneted mobile blocker

--- a/index.html
+++ b/index.html
@@ -422,7 +422,12 @@
                 </div>
             </div>
         </div>
-            
+
+        <div id="mobile-blocker">
+            <p>this website is currently not supported on mobile devices</p>
+        </div>
+        
+        <script src="static/js/mobile.js"></script>
         <script src="static/js/donation.js"></script>
         <script src="static/js/recorder.js"></script>
         <script src="static/js/slideshow.js"></script>
